--- a/index.html
+++ b/index.html
@@ -159,6 +159,12 @@
                         <a href="#" class="view-project">View Project</a>
                     </div>
                     <!-- End .project-info -->
+					       <!-- Modal for Image Pop-up -->
+			<div class="modal">
+       				 <span class="close">&times;</span>
+       				 <img class="modal-content" id="modal-img01">
+			</div>
+
                 </div>
                 <!-- End .project -->
 
@@ -175,6 +181,12 @@
                         <a href="#" class="view-project">View Project</a>
                     </div>
                     <!-- End .project-info -->
+					       <!-- Modal for Image Pop-up -->
+			<div class="modal">
+       				 <span class="close">&times;</span>
+       				 <img class="modal-content" id="modal-img02">
+			</div>
+
                 </div>
                 <!-- End .project -->
 
@@ -194,7 +206,7 @@
 		       <!-- Modal for Image Pop-up -->
 			<div class="modal">
        				 <span class="close">&times;</span>
-       				 <img class="modal-content" id="modal-img-2">
+       				 <img class="modal-content" id="modal-img03">
 			</div>
             </div>
             <!-- End .project -->
