--- a/index.html
+++ b/index.html
@@ -325,11 +325,11 @@
                 modals[index].style.display = 'block'; // Show the corresponding modal
 	// Determine which project was clicked and set the image accordingly
                 if (index === 0) {
-                    modalImgs[index].src = 'images/jot.jpg'; // Set the image src for the first project modal
+                    modalImgs[index].src = 'images/jotx.jpg'; // Set the image src for the first project modal
                 } else if (index === 1) {
-                    modalImgs[index].src = 'images/jot2.jpg'; // Set the image src for the second project modal
+                    modalImgs[index].src = 'images/jotx.jpg'; // Set the image src for the second project modal
                 } else if (index === 2) {
-                    modalImgs[index].src = 'images/jot3.jpg'; // Set the image src for the third project modal
+                    modalImgs[index].src = 'images/jotx.jpg'; // Set the image src for the third project modal
                     // Add more else if conditions for additional projects as needed
                 }
             });
