--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                 } else if (index === 1) {
                     modalImgs[index].src = 'images/jot2.jpg'; // Set the image src for the second project modal
                 } else if (index === 2) {
-                    modalImgs[index].src = 'images/jotx.jpg'; // Set the image src for the third project modal
+                    modalImgs[index].src = 'images/jot3.jpg'; // Set the image src for the third project modal
                     // Add more else if conditions for additional projects as needed
                 }
             });
