--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                       I've studied electrical electronics engineering at Chung-Ang University, Seoul, KR, and graduated as Bachelor of Science on february 2022. I am currently a student of Master degree in electrical electronics engineering at Yonsei University in Seoul, KR, studying bioengineering and fully expect to complete my degree by August 2024. I have a long-standing interest in studying Wearable and Stretchable electronics for long-term healthcare monitoring.
+I'm currently a Master's student in Electrical Engineering at Yonsei University advised by Prof. Jungmok Seo. My research focuses on bioengineering, with particular interest in developing Wearable and Stretchable electronics for long-term healthcare monitoring. Before that, I received my B.S degree in Electrical and Electronic Engineering from Chung-ang University. 
+
+I enjoy photography and outdoor activities. My passion for all collaboration stems from my belief in my abilities and the joy I find in working with others towards common goals leading to a better healthcare system and improved well-being for all.
                     </p>
                 </div>
             </div>
