--- a/index.html
+++ b/index.html
@@ -178,7 +178,9 @@ I enjoy photography and outdoor activities. My passion for all collaboration ste
                     <div class="project-info">
                         <h3>Stretchable Electronics</h3>
                         <p>
-				Soft electronics is an emerging technology enabling various applications, including wearable devices and human-machine interfaces, to conform to the irregular and curvilinear human body. In the functional operation of soft electronics, stretchable conductors are essential components as electrical interconnects enhancing performance and overcoming physical constraints for various applications.
+				Soft electronics is an emerging technology enabling various applications, including wearable devices and human-machine interfaces, to conform to the irregular and curvilinear human body.
+				<br><br>
+				In the functional operation of soft electronics, stretchable conductors are essential components as electrical interconnects enhancing performance and overcoming physical constraints for various applications.
                         </p>
                         <a href="#" class="view-project">View Project</a>
                     </div>
