--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ I enjoy photography and outdoor activities. My passion for all collaboration ste
                     <div class="project-info">
                         <h3>Energy Harvesting Device</h3>
                         <p>
-				Harvesting energy from living subjects, particularly through triboelectric and piezoelectric energy, holds significant promise for overcoming the limitations of battery capacity in wearable and implantable devices. It's an innovative approach that presents opportunities for self-powered electronics.
+Harvesting energy from living subjects, particularly through triboelectric and piezoelectric energy, holds significant promise for overcoming the limitations of battery capacity in wearable and implantable devices. This innovative approach presents opportunities for developing self-powered electronics.
                         </p>
                         <a href="#" class="view-project">View Project</a>
                     </div>
@@ -178,10 +178,10 @@ I enjoy photography and outdoor activities. My passion for all collaboration ste
                     <div class="project-info">
                         <h3>Stretchable Electronics</h3>
                         <p>
-				Soft electronics is an emerging technology enabling various applications, including wearable devices and human-machine interfaces, to conform to the irregular and curvilinear human body.
-				<br><br>
-				In the functional operation of soft electronics, stretchable conductors are essential components as electrical interconnects enhancing performance and overcoming physical constraints for various applications.
-                        </p>
+			Soft electronics is an emerging technology that enables various applications, including wearable devices and human-machine interfaces, to conform to the irregular and curvilinear surfaces of the human body.
+<br><br>
+In the functional operation of soft electronics, stretchable conductors are essential components. These conductors serve as electrical interconnects, enhancing performance and overcoming physical constraints in various applications. By providing stretchability, stretchable interconnects ensure reliable electrical connectivity even under significant mechanical deformation.
+			</p>
                         <a href="#" class="view-project">View Project</a>
                     </div>
                     <!-- End .project-info -->
@@ -202,7 +202,7 @@ I enjoy photography and outdoor activities. My passion for all collaboration ste
                 <div class="project-info">
                     <h3>Analog Hardware Circuit Design</h3>
                     <p>
-			    Analog circuit design involves the integration of circuits into a wide range of chips. Circuit design includes functions of battery management, voltage regulation, and charging functionalities.
+			    Analog circuit design involves the integration of circuits into a wide range of chips. This design process includes essential functions such as battery management, voltage regulation, and charging functionalities.
                     </p>
                         <a href="#" class="view-project">View Project</a>
                 </div>
