--- a/index.html
+++ b/index.html
@@ -154,11 +154,13 @@ I enjoy photography and outdoor activities. My passion for all collaboration ste
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Energy Harvesting Device</h3>
+                        <h3>Stretchable interconnects</h3>
                         <p>
-Harvesting energy from living subjects, particularly through triboelectric and piezoelectric energy, holds significant promise for overcoming the limitations of battery capacity in wearable and implantable devices. This innovative approach presents opportunities for developing self-powered electronics.
-                        </p>
-                     
+In the functional operation of soft electronics, stretchable conductors are essential components. These conductors serve as electrical interconnects, enhancing performance and overcoming physical constraints in various applications. By providing stretchability, stretchable interconnects ensure reliable electrical connectivity even under significant mechanical deformation.
+                     <br><br>
+				Moreover, stretchable conductors can significantly reduce the risk of damage or failure in electronic systems, prolonging the lifespan of devices and ensuring consistent functionality.
+			</p>
+                	   <a href="#" class="view-project">View Project</a>
                     </div>
                     <!-- End .project-info -->
 					       <!-- Modal for Image Pop-up -->
@@ -179,8 +181,8 @@ Harvesting energy from living subjects, particularly through triboelectric and p
                         <h3>Stretchable Electronics</h3>
                         <p>
 			Soft electronics is an emerging technology that enables various applications, including wearable devices and human-machine interfaces, to conform to the irregular and curvilinear surfaces of the human body.
-<br><br>
-In the functional operation of soft electronics, stretchable conductors are essential components. These conductors serve as electrical interconnects, enhancing performance and overcoming physical constraints in various applications. By providing stretchability, stretchable interconnects ensure reliable electrical connectivity even under significant mechanical deformation.
+				<br><br>
+				By providing a more natural and comfortable fit, soft electronics enhance user experience and device performance. Furthermore, the adaptability of soft electronics opens up new possibilities in medical diagnostics, personalized healthcare, and interactive systems, where traditional rigid electronics would be impractical or uncomfortable.
 			</p>
                         <a href="#" class="view-project">View Project</a>
                     </div>
