--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@ I enjoy photography and outdoor activities. My passion for all collaboration ste
                     <div class="project-info">
                         <h3>Stretchable interconnects</h3>
                         <p>
-In the functional operation of soft electronics, stretchable conductors are essential components. These conductors serve as electrical interconnects, enhancing performance and overcoming physical constraints in various applications. By providing stretchability, stretchable interconnects ensure reliable electrical connectivity even under significant mechanical deformation.
+In the functional operation of soft electronics, stretchable interconnects is essential components enhancing performance and overcoming physical constraints in various applications. By providing stretchability, stretchable interconnects ensure reliable electrical connectivity even under significant mechanical deformation.
                      <br><br>
-				Moreover, stretchable conductors can significantly reduce the risk of damage or failure in electronic systems, prolonging the lifespan of devices and ensuring consistent functionality.
+				In particular, we focus on liquid metals, which possess high electrical conductivity and excellent stretchability. These materials are ideal candidates for advanced soft electronic applications, as they can maintain consistent electrical performance even when subjected to extreme deformations. This capability is crucial for the development of next-generation wearable devices and human-machine interfaces.
 			</p>
                 	   <a href="#" class="view-project">View Project</a>
                     </div>
