--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ I enjoy photography and outdoor activities. My passion for all collaboration ste
                         <p>
 In the functional operation of soft electronics, stretchable interconnects is essential components enhancing performance and overcoming physical constraints in various applications. By providing stretchability, stretchable interconnects ensure reliable electrical connectivity even under significant mechanical deformation.
                      <br><br>
-				In particular, we focus on liquid metals, which possess high electrical conductivity and excellent stretchability. These materials are ideal candidates for advanced soft electronic applications, as they can maintain consistent electrical performance even when subjected to extreme deformations. This capability is crucial for the development of next-generation wearable devices and human-machine interfaces.
+				In particular, we focus on liquid metals, which possess high electrical conductivity and excellent stretchability. These materials are ideal candidates for advanced soft electronic applications, as they can maintain consistent electrical performance even when subjected to extreme deformations.
 			</p>
                 	   <a href="#" class="view-project">View Project</a>
                     </div>
@@ -180,10 +180,9 @@ In the functional operation of soft electronics, stretchable interconnects is es
                     <div class="project-info">
                         <h3>Stretchable Electronics</h3>
                         <p>
-			Soft electronics is an emerging technology that enables various applications, including wearable devices and human-machine interfaces, to conform to the irregular and curvilinear surfaces of the human body.
-				<br><br>
-				By providing a more natural and comfortable fit, soft electronics enhance user experience and device performance. Furthermore, the adaptability of soft electronics opens up new possibilities in medical diagnostics, personalized healthcare, and interactive systems, where traditional rigid electronics would be impractical or uncomfortable.
-			</p>
+	Soft electronics is an emerging technology that enables various applications, including wearable devices and human-machine interfaces, to conform to the irregular and curvilinear surfaces of the human body.
+
+By providing a natural and comfortable fit, soft electronics enhance user experience and device performance. This adaptability opens up new possibilities in medical diagnostics, personalized healthcare, and interactive systems where traditional rigid electronics would be impractical.		</p>
                         <a href="#" class="view-project">View Project</a>
                     </div>
                     <!-- End .project-info -->
