--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ By providing a natural and comfortable fit, soft electronics enhance user experi
                 modals[index].style.display = 'block'; // Show the corresponding modal
 	// Determine which project was clicked and set the image accordingly
                 if (index === 0) {
-                    modalImgs[index].src = 'images/jotx.jpg'; // Set the image src for the first project modal
+                    modalImgs[index].src = 'images/jot1.jpg'; // Set the image src for the first project modal
                 } else if (index === 1) {
                     modalImgs[index].src = 'images/jot2.jpg'; // Set the image src for the second project modal
                 } else if (index === 2) {
