--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ I enjoy photography and outdoor activities. My passion for all collaboration ste
                 <div class="project shadow-large">
                     <div class="project-image">
 			      <a href="#" class="project-img-link">
-                        <img src="images/EHD.jpg" />
+                        <img src="images/SI.jpg" />
 			      </a>
                     </div>
                     <!-- End .project-image -->
