--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ I enjoy photography and outdoor activities. My passion for all collaboration ste
                 <div class="project shadow-large">
                     <div class="project-image">
 			      <a href="#" class="project-img-link">
-                        <img src="images/SI.jpg" />
+                        <img src="images/SI2.jpg" />
 			      </a>
                     </div>
                     <!-- End .project-image -->
@@ -178,7 +178,7 @@ In the functional operation of soft electronics, stretchable interconnects is es
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Stretchable Electronics</h3>
+                        <h3>Soft Electronics</h3>
                         <p>
 	Soft electronics is an emerging technology that enables various applications, including wearable devices and human-machine interfaces, to conform to the irregular and curvilinear surfaces of the human body.
 
