--- a/index.html
+++ b/index.html
@@ -231,13 +231,13 @@ By providing a natural and comfortable fit, soft electronics enhance user experi
         <h3>Published Papers</h3>
         <ul>
             <li>
-                S. Kim et al., “Sonicated Highly Adhesive LM paste for Stretchable Electronics”, in preparation.
+                <strong>S. Kim*</strong>strong> et al., “Sonicated Highly Adhesive LM paste for Stretchable Electronics”, in preparation.
             </li>
             <li>
-                S. Kim, S. Kim et al., “Sintering-free Liquid Metal Ink for Stretchable Printed Electronics”, in preparation.
+                S. Kim*, <strong>S. Kim</strong>strong> et al., “Sintering-free Liquid Metal Ink for Stretchable Printed Electronics”, in preparation.
             </li>
             <li>
-                T. Kim, S. Kim et al., (2024) <a href="/portfolio/Lubricant-Infused Polymeric Interfaces_AFM.pdf" download="Lubricant-Infused Polymeric Interfaces_AFM.pdf">“Lubricant-Infused Polymeric Interfaces: A Stretchable and Anti-Fouling Surface for Implantable Biomaterials"_pdf</a>, Advanced Functional Materials
+                T. Kim*, <strong>S. Kim</strong>strong> et al., (2024) <a href="/portfolio/Lubricant-Infused Polymeric Interfaces_AFM.pdf" download="Lubricant-Infused Polymeric Interfaces_AFM.pdf">“Lubricant-Infused Polymeric Interfaces: A Stretchable and Anti-Fouling Surface for Implantable Biomaterials"_pdf</a>, Advanced Functional Materials
             </li>
         </ul>
 	
