--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ By providing a natural and comfortable fit, soft electronics enhance user experi
         <h3>Conferences Papers</h3>
         <ul>
             <li>
-                S. Kim et al., (2023). <a href="/portfolio/IEEE nanomed.pdf" download="IEEE nanomed.pdf">“Scalable Manufacturing of Stretchable Electronic Devices based Biphasic Liquid Metal Stamp”_pdf</a>, Abstract and Poster at IEEE nanomed conference 2023, Okinawa, JP (Selected as Best Poster Competition)
+                <strong style="color: red;">S. Kim*</strong> et al., (2023). <a href="/portfolio/IEEE nanomed.pdf" download="IEEE nanomed.pdf">“Scalable Manufacturing of Stretchable Electronic Devices based Biphasic Liquid Metal Stamp”_pdf</a>, Abstract and Poster at IEEE nanomed conference 2023, Okinawa, JP (Selected as Best Poster Competition)
             </li>
         </ul>
     </div>
