--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-I'm currently a Master's student in Electrical Engineering at Yonsei University advised by Prof. Jungmok Seo. My research focuses on bioengineering, with particular interest in developing Wearable and Stretchable electronics for long-term healthcare monitoring. Before that, I received my B.S degree in Electrical and Electronic Engineering from Chung-ang University. 
+I'm currently a Master's student in Electrical Engineering at Yonsei University advised <a href="http://bliss.yonsei.ac.kr/" target="_blank">by Prof. Jungmok Seo</a>. My research focuses on bioengineering, with particular interest in developing Wearable and Stretchable electronics for long-term healthcare monitoring. Before that, I received my B.S degree in Electrical and Electronic Engineering from Chung-ang University. 
 <br><br>
 I enjoy photography and outdoor activities. My passion for all collaboration stems from my belief in my abilities and the joy I find in working with others towards common goals leading to a better healthcare system and improved well-being for all.
                     </p>
