--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ By providing a natural and comfortable fit, soft electronics enhance user experi
                 <div class="col-sm-5 social">
                     <ul>
                        <li>
-                            <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/kim-timothee-a05905308/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
                         <li>
                             <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
