--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@ I enjoy photography and outdoor activities. My passion for all collaboration ste
                     <div class="project-info">
                         <h3>Stretchable interconnects</h3>
                         <p>
-In the functional operation of soft electronics, stretchable interconnects is essential components enhancing performance and overcoming physical constraints in various applications. By providing stretchability, stretchable interconnects ensure reliable electrical connectivity even under significant mechanical deformation.
+Stretchable interconnects is essential components enhancing performance and overcoming physical constraints in soft electronics. By providing stretchability, it ensure reliable electrical connectivity even under significant mechanical deformation.
             
-				In particular, we focus on liquid metals, which possess high electrical conductivity and excellent stretchability. These materials are ideal candidates for advanced soft electronic applications, as they can maintain consistent electrical performance even when subjected to extreme deformations.
+				In particular, liquid metal, which possess high electrical conductivity and excellent stretchability is ideal candidates for advanced soft electronic applications, as they can maintain consistent electrical performance even when subjected to extreme deformations.
 			</p>
                 	   <a href="#" class="view-project">View Project</a>
                     </div>
@@ -182,7 +182,7 @@ In the functional operation of soft electronics, stretchable interconnects is es
                         <p>
 	Soft electronics is an emerging technology that enables various applications, including wearable devices and human-machine interfaces, to conform to the irregular and curvilinear surfaces of the human body.
 
-By providing a natural and comfortable fit, soft electronics enhance user experience and device performance. This adaptability opens up new possibilities in medical diagnostics, personalized healthcare, and interactive systems where traditional rigid electronics would be impractical.		</p>
+By providing a natural and comfortable fit, soft electronics enhance user experience and device performance. This adaptability opens up new possibilities in medical diagnostics, personalized healthcare, and interactive systems.		</p>
                         <a href="#" class="view-project">View Project</a>
                     </div>
                     <!-- End .project-info -->
