--- a/index.html
+++ b/index.html
@@ -112,12 +112,9 @@ I enjoy photography and outdoor activities. My passion for all collaboration ste
         <h2 class="heading">Education</h2>
         <div class="education-block">
             <h3>Yonsei University, Seoul, KR</h3>
-            <span class="education-date">August 2022 - September 2024</span>
+            <span class="education-date">August 2022 - </span>
             <h4>Master of Electrical Electronics Engineering</h4>
             <ul>
-                <li>
-                    GPA: 3.8/4.3
-                </li>
 		<li>
                     Studying Wearable and Stretchable bioelectronics for long-term healthcare monitoring.
                 </li>
@@ -129,9 +126,6 @@ I enjoy photography and outdoor activities. My passion for all collaboration ste
             <span class="education-date">January 2017 - february 2022</span>
             <h4>Barchelor science of Electrical Electronics Engineering</h4>
             <ul>
-                <li>
-                    GPA: 3.8/4.5
-                </li>
 		<li>
                     Designing and supervising analog hardware circuit of semicondoctors
                 </li>
